# chess

./: Cargo.toml  convtxt.py
src/: chess.rs  computer_player.rs  human_player.rs  main.rs
src/chess/: bitboards.rs  board.rs  magic.rs  move_gen.rs  moves.rs  pieces.rs  position.rs  zobrist.rs
